# AI_Private_Chef

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/agents/: personal_chief.py  personal_chief_langsmith.py
app/api/v1/: chat.py  oss.py
app/common/: exceptions.py  logger.py  validators.py
app/models/: schemas.py
app/static/: debug.html  diagnose.html  index.html  test.html
app/static/css/: style.css
app/static/js/: api.js  app.js  components.js  store.js
resources/: personal_chief.db-shm  personal_chief.db-wal
tests/: test_validators.py
